[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
crossbeam-channel = "0.5.15"
features = "0.10.0"
influxdb3 = "0.2.0"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
log = "0.4.29"
rhai = { version = "1.24.0", features = ["f32_float", "only_i64", "no_closure", "no_position"] }
rust7 = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-modbus = "0.17.0"
tokio-serial = "5.4.5"
tower-http = { version = "0.6.8", features = ["trace"] }
trace = "0.1.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
